# SilvCore

./: .gitignore  CMakeLists.txt  README.md
include/component/: renderComponent.h  transformComponent.h
include/core/: engine.h  entityManager.h
include/system/: renderSystem.h  transformSystem.h
include/utils/: matrix.h  vector2.h  vector3.h
src/: main.c
src/core/: engine.c  entityManager.c
src/system/: renderSystem.c  transformSystem.c
src/utils/: matrix.c
